--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^5.18.0",
+    "@auth/prisma-adapter": "^2.4.2",
+    "@prisma/client": "^5.19.0",
+    "bcryptjs": "^2.4.3",
     "cookies-next": "^4.2.1",
     "next": "14.0.0",
+    "next-auth": "^5.0.0-beta.20",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -26,7 +30,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.0",
     "postcss": "^8",
-    "prisma": "^5.18.0",
+    "prisma": "^5.19.0",
     "tailwindcss": "^3",
     "typescript": "^5"
   }
